--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 
 /* Google Icon */
 .material-symbols-rounded {
+  color: rgb(146, 145, 145);
+  cursor: pointer;
   font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 48;
 }
 
@@ -10,8 +12,8 @@
   margin: 0;
 }
 
-.Appc {
-  width: 50%;
+.todoListContainer {
+  width: 40%;
   display: flex;
   flex-direction: column;
   margin: auto;
