--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,10 @@ header {
 nav {
   width: 100px;
   position: absolute;
+  border: 2px solid black;
   border-radius: 5px;
   left: 25px;
+  background-color: whitesmoke;
 }
 
 .menu {
@@ -37,6 +39,15 @@ nav {
   padding: 10px;
   font-size: 18px;
   font-weight: 700;
+}
+
+.menu a {
+  text-decoration: none;
+  color: orange;
+}
+
+.menu a:hover {
+  color: blue;
 }
 
 .active {
@@ -96,4 +107,9 @@ button {
 .error-msg {
   color: red;
   margin: 10px;
+}
+
+.about {
+  text-align: center;
+  font-size: 40px;
 }
