Add completed class in index.css file.

--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,10 @@ nav {
   padding: 0 20px 0 20px;
 }
 
+.completed {
+  text-decoration: line-through;
+}
+
 button {
   border: none;
   background: transparent;
